[add] 收录 54 个 API 文档

--- a/chrome/_locales/zh_CN/messages.json
+++ b/chrome/_locales/zh_CN/messages.json
@@ -1,3 +1,4 @@
 {
-  "POPUP_NAME": {"message": "OverAPI"}
+  "POPUP_NAME": {"message": "OverAPI"},
+  "POPUP_SEARCH_PLACEHOLDER": {"message": "搜索 API 项"}
 }
