[add] 处理无搜索结果时的逻辑

--- a/chrome/_locales/zh_CN/messages.json
+++ b/chrome/_locales/zh_CN/messages.json
@@ -1,4 +1,7 @@
 {
   "POPUP_NAME": {"message": "OverAPI"},
-  "POPUP_SEARCH_PLACEHOLDER": {"message": "搜索 API 项"}
+  "POPUP_SEARCH_PLACEHOLDER": {"message": "搜索 API 项"},
+  "POPUP_CASE_1": {"message": "收录"},
+  "POPUP_CASE_2": {"message": "个 API 文档"},
+  "POPUP_NO_SEARCH_RESULT": {"message": "🔍 暂无搜索结果"}
 }
